
allprojects {
    group = 'com.tazadum.glsl'
    version = '1.2.2'
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    repositories {
        jcenter()
        mavenLocal()
    }

    ext {
        antlrVersion = '4.7.2'
    }

    java {
        withJavadocJar()
        withSourcesJar()
    }

    publishing {
        publications {
            lib(MavenPublication) {
                from components.java
            }
        }
    }

    dependencies {
        implementation "org.slf4j:slf4j-api:1.8.0-beta4"

        testImplementation 'org.mockito:mockito-core:2.9.0'

        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.0'
        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.5.0'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.0'
    }
}